Fix: Remove pagos/inscripcion padding on medium screens (992-1200px) to prevent overflow

--- a/css/dorians-sublime-site-c8cd93.webflow.css
+++ b/css/dorians-sublime-site-c8cd93.webflow.css
@@ -9476,5 +9476,19 @@
   .inscripcion-mobile-cards .ins-card .modular-text:last-child { margin-bottom: 0 !important; } /* remove margin from last element */
 }
 
+/* Fix overflow on medium screens (Nest Hub ~1024px to ~1200px) */
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+  .modular-features-09-grid-boxes.pagos {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+  
+  .modular-features-02.inscripcion {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+}
+
+
 
 
